# sudns01

./: .gitignore  Makefile  clients.py  pyproject.toml  requirements.txt  resolver.py  run.py
.github/: dependabot.yml
.github/workflows/: test.yml
bind/: .gitignore  Makefile  README.md  named.conf  zone.orig
clients/: exceptions.py  query.py  resolver.py  tkey.py
kdc/: .gitignore  Makefile  README.md  kdc.conf  krb5.conf
sudns01/: certbot.py  cli.py  wait.py
sudns01/clients/: challenge.py  exceptions.py  query.py  resolver.py  tkey.py
tests/: test_challenge.py  test_challenge_cleanup.py  test_query.py  test_query_stringify.py  test_resolver.py  test_wait.py
